css fixes in the dashboard, app button fix, some logics

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "db:seed": "tsx seed.ts"
   },
   "dependencies": {
-    "@libsql/client": "^0.6.2",
+    "@libsql/client": "^0.15.15",
     "@nextui-org/react": "^2.3.6",
     "@scaleway/random-name": "^5.1.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.6",
     "framer-motion": "^11.1.9",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
