--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "@libsql/client": "^0.15.15",
     "@nextui-org/react": "^2.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@scaleway/random-name": "^5.1.0",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.6",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.18.2",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
@@ -27,6 +30,8 @@
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
